// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview Panel Component snapshot ImageRenderer 1`] = `
<div
  className="preview-panel"
>
  <ImageRenderer
    fileName="file_name.ImageRenderer"
    url="some_url.pdf"
  />
</div>
`;

exports[`Preview Panel Component snapshot PDFRenderer 1`] = `
<div
  className="preview-panel"
>
  <PDFRenderer
    fileName="file_name.PDFRenderer"
    url="some_url.pdf"
  />
</div>
`;

exports[`Preview Panel Component snapshot default 1`] = `
<div
  className="preview-panel"
>
  <DefaultRenderer
    url="some_url.pdf"
  />
</div>
`;
